--- a/programs/keosd/CMakeLists.txt
+++ b/programs/keosd/CMakeLists.txt
@@ -1,3 +1,5 @@
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+
 add_executable( ${KEY_STORE_EXECUTABLE_NAME} main.cpp )
 if( UNIX AND NOT APPLE )
   set(rt_library rt )
